fixed white text to white background for some components in dark mode

--- a/src/resources/stylesheets/dark.css
+++ b/src/resources/stylesheets/dark.css
@@ -4,6 +4,10 @@
   -fx-text-fill: white;
 }
 
+.text-field, .text-area {
+  -fx-text-fill: black;
+}
+
 .combo-box, .combo-box .context-menu, .button, .color-picker {
   -fx-border-radius: 20px;
   -fx-background-radius: 20px;
